ci: 在构建和测试步骤中添加详细输出选项
使用 -v 参数使构建和测试过程输出更详细的日志信息，便于调试

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,7 +23,7 @@ jobs:
         swift-version: ${{ matrix.swift-version }}
 
     - name: Build
-      run: swift build
+      run: swift build -v
 
     - name: Test
-      run: swift test
+      run: swift test -v
