docs(SHCAngle): 添加角度类型的详细文档注释
为SHCAngle枚举及其所有方法添加详细的中英文文档注释，说明其用途、参数和返回值
更新VSCode设置以支持Swift项目文件夹图标

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,12 @@
   "files.associations": {
     "*.txt": "markdown"
   },
-  "cSpell.words": [
-    "IGRF"
-  ]
+  "material-icon-theme.folders.associations": {
+    ".swiftpm": "swift",
+    ".swiftpm/xcode/package.xcworkspace": "swift",
+    "Sources/GeoMagSwift": "src",
+    "Tests/GeoMagTests": "test",
+    "Tests": "test"
+  },
+  "cSpell.words": ["IGRF"]
 }
