chore: 更新VS Code图标主题文件夹关联配置
将.swiftpm文件夹及其子文件的图标关联从swift改为intellij，并移除不再需要的文件关联配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,7 @@
 {
-  "files.associations": {
-    "*.txt": "markdown"
-  },
   "material-icon-theme.folders.associations": {
-    ".swiftpm": "swift",
-    ".swiftpm/xcode/package.xcworkspace": "swift",
+    ".swiftpm": "intellij",
+    ".swiftpm/xcode/package.xcworkspace": "intellij",
     "Sources/GeoMagSwift": "src",
     "Tests/GeoMagTests": "test",
     "Tests": "test"
