ci: 添加 GitHub Pages 文档发布工作流
添加用于自动生成和发布 Swift 文档的 GitHub Actions 工作流。该工作流会在推送到 main 或 master 分支时触发，使用 Swift 6.0 生成文档并部署到 GitHub Pages。

同时更新了 VS Code 拼写检查配置，添加了 Docc 相关单词。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     "Tests/GeoMagTests": "test",
     "Tests": "test"
   },
-  "cSpell.words": ["IGRF"]
+  "cSpell.words": [
+    "Docc",
+    "IGRF"
+  ]
 }
