ci(文档): 更新文档生成工作流以使用docc工具
使用docc工具替代swift package generate-documentation来生成文档，以支持更多自定义选项如显示名称、包标识符和版本号

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,8 +28,13 @@ jobs:
 
     - name: Generate Documentation
       run: |
-        swift package generate-documentation \
+        swift package dump-symbol-graph \
           --target GeoMagSwift \
+          --output-path .build/symbolgraphs
+        xcrun docc convert .build/symbolgraphs \
+          --fallback-display-name GeoMagSwift \
+          --fallback-bundle-identifier com.geomagswift.docs \
+          --fallback-bundle-version 0.0.1 \
           --output-path docs-output \
           --transform-for-static-hosting \
           --hosting-base-path GeoMagSwift
