--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,9 @@ name: Swift Docc Publish
 
 on:
   push:
-    branches: [main, master]
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
 permissions:
   contents: read
@@ -15,17 +17,20 @@ concurrency:
 
 jobs:
   build-docs:
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
+        swift-version: ["6.0"]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Swift
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: "6.0"
+          swift-version: ${{ matrix.swift-version }}
 
-      - name: Generate Documentation
+      - name: Generate Docc
         run: |
           swift package --allow-writing-to-directory .github/.pages \
             generate-documentation --target GeoMagSwift \
