--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -2,9 +2,9 @@ name: Build and Test
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
 
 jobs:
   build-test:
@@ -12,18 +12,42 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest]
-        swift-version: ['6.0']
+        swift-version: ["6.0"]
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Swift
-      uses: swift-actions/setup-swift@v2
-      with:
-        swift-version: ${{ matrix.swift-version }}
+      - name: Set up Swift
+        uses: swift-actions/setup-swift@v2
+        with:
+          swift-version: ${{ matrix.swift-version }}
 
-    - name: Build
-      run: swift build -v
+      - name: Test Package
+        run: swift test -v
 
-    - name: Test
-      run: swift test -v
+      - name: Generate Docc
+        run: swift package --allow-writing-to-directory .github/.pages \
+          generate-documentation --target GeoMagSwift \
+          --disable-indexing \
+          --transform-for-static-hosting \
+          --hosting-base-path GeoMagSwift \
+          --output-path .github/.pages
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "./.github/.pages"
+
+  deploy-docs:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build-docs
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
