--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -20,26 +20,11 @@ jobs:
         with:
           swift-version: "6.2"
 
-      - name: Clean up existing documentation
-        run: |
-          if [ -d ".github/.pages" ]; then
-            rm -rf ".github/.pages"
-            echo "Cleaned up existing documentation directory"
-          fi
-          if [ -d ".build" ]; then
-            rm -rf ".build"
-            echo "Cleaned up existing build directory"
-          fi
+      - name: Make build-pages.sh executable
+        run: chmod +x ./build-pages.sh
 
       - name: Generate Documentation
-        run: |
-          mkdir -p .github/.pages
-          swift package --allow-writing-to-directory .github/.pages \
-            generate-documentation \
-            --disable-indexing \
-            --transform-for-static-hosting \
-            --hosting-base-path GeoMagSwift \
-            --output-path .github/.pages
+        run: ./build-pages.sh
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
